[package]
name = "tktts"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
url = "2.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
